planB/.omx/static-audit-20260713/environment-probe-2c618-red.log
native-reimplementation/recovered_primitives.cpp:23594:10: error: use of undeclared identifier 'recoveredRaspberryManufacturerProbe2c618Regression'
 23594 |     if (!recoveredRaspberryManufacturerProbe2c618Regression()) {
       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
